style(stats): fix z-index on count

--- a/src/components/manage/Blocks/CollectionStatistics/styles.less
+++ b/src/components/manage/Blocks/CollectionStatistics/styles.less
@@ -43,7 +43,7 @@
 
     .count {
       position: absolute;
-      z-index: 100;
+      z-index: 1;
       top: auto;
       bottom: 0;
       left: 100%;
